force-app/main/default/objects/BOV_Submission__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposition</label>
    <referenceTo>Disposition__c</referenceTo>
    <relationshipLabel>BOV Submissions</relationshipLabel>
    <relationshipName>BOV_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>