force-app/main/default/objects/BOV_Submission__c/fields/Hist_Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hist_Success_Rate__c</fullName>
    <label>Hist. Success</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>