force-app/main/default/objects/BOV_Submission__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <formula>Disposition__r.Property_Asset__r.Name</formula>
    <label>Property Name</label>
    <type>Text</type>
</CustomField>