force-app/main/default/objects/BOV_Submission__c/fields/Selected_Broker__c.field-meta.xml
<CustomField>
    <fullName>Selected_Broker__c</fullName>
    <formula>Disposition__r.Selected_Broker__c</formula>
    <label>Selected Broker</label>
    <type>Text</type>
</CustomField>