force-app/main/default/objects/BOV_Submission__c/fields/Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Submission_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backup</fullName>
                <default>true</default>
                <label>Backup</label>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>