force-app/main/default/objects/BOV_Submission__c/validationRules/BOV_Amount_Required_On_Submission.validationRule-meta.xml
<ValidationRule>
    <!--
        THIS NOTE LIVES IN A COMMENT, NOT IN <description>. ValidationRule.Description is
        capped at 255 characters; a comment is repo-only and is never sent to the Metadata
        API. It must sit INSIDE the root element. A comment placed ABOVE <ValidationRule>
        breaks `sf` deploy at conversion with a misleading "unable to find matching parent xml
        file" error.

        =====================================================================================
        ADDED 2026-08-20 (Tranche 2, Workstream A1).
        =====================================================================================
        The BOV amount is the entire point of a Broker Opinion of Value. Responses_Received__c
        on Disposition__c counts these rows, and the comparison matrix ranks them by amount; a
        row with no amount inflates the count and contributes nothing to the ranking.

        =====================================================================================
        🔴 A VALIDATION RULE, NOT `required=true`, AND THIS FIELD IS WHERE THAT DECISION
        DIVERGES FROM THE TRANCHE 2 REQUIREMENTS DOC. READ THIS BEFORE "FIXING" IT.
        =====================================================================================
        Requirements doc §2 A1 routes the two CURRENCY fields (this one and
        Disposition_Offer__c.Offer_Amount__c) to `required=true` on the field, reasoning that
        a currency field has no lookup or delete constraint interaction. That reasoning is
        correct as far as it goes and it is INCOMPLETE.

        MEASURED 2026-08-20: BOV_Submission__c.BOV_Amount__c is granted, editable, in
        DPEG_Disposition_Edit AND readable in DPEG_Disposition_View. A universally required
        field cannot carry field level security and the Metadata API rejects a
        fieldPermissions entry naming one, so `required=true` here forces the DELETION of
        that grant from both permission sets to keep them deployable. This tranche is
        simultaneously EDITING both of those files to close a live FLS gap on NDA__c, and a
        PermissionSet deploy REPLACES the whole fieldPermissions set. Trading a documented
        grant for an asterisk on a layout is the wrong side of that trade.
        Same argument, same measurement, for Disposition_Offer__c.Offer_Amount__c.

        SECOND, SMALLER REASON: `required=true` produces the platform's own generic
        "Required fields are missing: [BOV Amount]" text. A rule carries an authored message
        that says what the amount is FOR.

        =====================================================================================
        🔴 RETRACTED 2026-08-24 (agent-output/bov-autoselect-preferred-brokers.md, §3.7/§5 A5).
        THE HEADING BELOW NO LONGER DESCRIBES THIS RULE. Quoted and retracted in place, not
        deleted, because it correctly explains why NO EXEMPTION EXISTED BEFORE TODAY and a reader
        tracing the rule's history needs that.
        =====================================================================================
            RETRACTED HEADING: "NO STATUS EXEMPTION, BECAUSE THERE IS NO STATUS TO EXEMPT.
            CHECKED, NOT ASSUMED."
        The reasoning under it stands and is still correct for every ORDINARY BOV response:
        Submission_Status__c's restricted value set is still {Backup, Selected}, both of which
        describe a broker who DID respond, so an unguarded ISBLANK still refuses nothing
        legitimate on that path. 🔴 IF A NON RESPONSE VALUE IS EVER ADDED TO Submission_Status__c,
        THIS RULE MUST BE AMENDED IN THE SAME CHANGE or it will freeze every such row.

        WHAT CHANGED: a row is no longer only ever a response. Is_Preferred_Broker__c
        (objects/BOV_Submission__c/fields/Is_Preferred_Broker__c.field-meta.xml, added in the same
        change as this amendment) marks a manually-appointed preferred broker — "a firm you'd like
        to use, not a firm that has quoted" (design §3.7) — arriving via a FLAG rather than a
        Submission_Status__c value, which is exactly the shape the paragraph above anticipated
        without naming. The formula below now reads
        AND(NOT(Is_Preferred_Broker__c), ISBLANK(BOV_Amount__c)) so a preferred row with no amount
        saves cleanly while an ORDINARY response with no amount is refused exactly as before.
        🔴 Broker_Required_On_Submission (the sibling rule, same object) is DELIBERATELY NOT
        amended in this change — a preferred broker still names a Contact; see that file.

        =====================================================================================
        🔴 MEASURED IMPACT AT CREATION: ONE EXISTING ROW IS REFUSED.
        =====================================================================================
        Queried on usman-dpeg, 2026-08-20:
          SELECT COUNT(Id) FROM BOV_Submission__c                            -> 1
          SELECT COUNT(Id) FROM BOV_Submission__c WHERE BOV_Amount__c = null -> 1
        The one row is BOV-0014, which also violates Broker_Required_On_Submission. See that
        file for the disposition of it. 🔴 Re-run the count at deploy time.
        ⚠ TestDataFactory.createBovSubmissions ALREADY sets BOV_Amount__c, so this rule needs
        no factory change. Its sibling Broker_Required_On_Submission does.
    -->
    <fullName>BOV_Amount_Required_On_Submission</fullName>
    <active>true</active>
    <description>A BOV response must carry the opinion of value it exists to record; a blank amount cannot be ranked. Exempt when Is_Preferred_Broker__c: a preferred broker is a firm you'd like to use, not one that has quoted. See the XML comment.</description>
    <errorConditionFormula>AND(NOT(Is_Preferred_Broker__c), ISBLANK(BOV_Amount__c))</errorConditionFormula>
    <errorMessage>Enter the BOV Amount this broker submitted. A Broker Opinion of Value with no value cannot be ranked against the other responses or used to appoint a broker.</errorMessage>
    <errorDisplayField>BOV_Amount__c</errorDisplayField>
</ValidationRule>